@@ -1,6 +1,9 @@
 apod (Astronomy Picture of the Day) Client for #FujiNet
 Change Log
 
+ * 2021-05-27
+   + WIP - Speak the title of the image.  (Press [V])
+
  * 2021-05-05
    + Display of image titles at the bottom while viewing
      (only on some viewin gmodes)
